# DummyCpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: AGENTS.md  CONVENTIONS.md  architecture.md  auto-plan.md  decisions.md  dpp-philosophy.md  next-steps-parser-conversion-plan.md  notes.md  plan.md  planned-features.md  questions.md  resources.md  roadmap.md  session-notes-2026-06-26.md  unsupported.md
examples/: algorithm_ints.cpp  class_counter.cpp  map_counts.cpp  multi_feature_scores.cpp  point.cpp  vector_int.cpp
examples/multifile_known_fail/: README.md  inventory.cpp  inventory.h  main.cpp  reporting.cpp  reporting.h  templates.h
examples/multifile_supported/: counts.cpp  main.cpp  ordering.cpp  score_adder.h  score_printer.h  scores.cpp  vector_role.h
include/: AGENTS.md
include/dpp/: ir.h  string_utils.h  transpiler.h
inject/: AGENTS.md  CMakeLists.txt  README.md
inject/c/: dpp_algorithm.h  dpp_map.c  dpp_map.h  dpp_memory.c  dpp_memory.h  dpp_string.c  dpp_string.h  dpp_vector.c  dpp_vector.h
scripts/: build.sh  gen_lexer.sh  install_dependencies_ubuntu.sh  run_multifile_known_fail_example.sh  run_multifile_supported_example.sh  run_point_example.sh  test_all.sh
src/: AGENTS.md  ir.cpp  main.cpp  string_utils.cpp  transpiler.cpp
src/convert/: AGENTS.md  CMakeLists.txt  algorithm.cpp  assertions.cpp  basic.cpp  cleanup.cpp  cleanup.h  free_functions.cpp  iostream.cpp  map.cpp  memory.cpp  records.cpp  string.cpp  templates.cpp  vector.cpp
src/parser/: AGENTS.md  CMakeLists.txt  ir.cpp  lexer.cpp  lexer.h  lexer.re  parser.cpp  preprocessor.cpp  syntax_checker.cpp
tests/: AGENTS.md  README.md  parser_tests.cpp
tests/cases/: 001_cout.cpp  002_locals_and_arithmetic.cpp  002_struct_return.cpp  003_assertions.cpp  005_struct_method.cpp  007_vector_record.cpp  010_using_namespace_vector.cpp  010_vector_record_variable.cpp  011_class_method_param.cpp  011_vector_double.cpp  013_long_records_classes.cpp  014_long_vectors_runtime.cpp  014_single_inheritance.cpp  016_unique_ptr_class.cpp  017_shared_ptr_class.cpp  018_map_int.cpp  018_unordered_map_int.cpp  019_map_integral_keys.cpp  020_algorithm_sort.cpp  021_algorithm_more.cpp  023_inheritance_access_modifiers.cpp  024_class_vector_ref.cpp  027_string_basic.cpp  (+86 more)
(+26 files in other folders)
